1.0
 * Initial version, for DKs

1.1
 * Updated to 5.0.x API
 * Ported Rogue buttons from ComboMeal addon

1.2
 * Upgrade to interface 50100

1.3
 * Upgrade to interface 50300

1.4
 * Changed the way modules work
 * Added prot warrior module
 * Added guardian druid module